@@ -1,3 +1,8 @@
+2015-08-29	Franz Holzinger <franz@ttproducts.de>
+	* bugfix: do not use empty field names for the basket
+	* use CSS styled HTML template
+	* add a database key to the orderuid field
+
 2015-05-21	Franz Holzinger <franz@ttproducts.de>
 	* bugfix: use returnPID even if the payment activity is verify
 	* new feature: add a cancelPID
